# FlightRecorder

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FlightRecorder-Hooks.ps1  Install-FlightRecorder.ps1  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  THIRD_PARTY_NOTICES.md  Uninstall-FlightRecorder.ps1
.agents/plugins/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release-preview.yml
apps/bridge/: Cargo.toml
apps/bridge/src/: main.rs
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src/: main.rs
apps/desktop/ui/: app.css  app.js  index.html
crates/core/: Cargo.toml
crates/core/src/: capture.rs  clock.rs  crypto.rs  input.rs  ipc.rs  lib.rs  manager.rs  model.rs  parser.rs  presentation.rs  process.rs  store.rs
docs/: ENGINEERS_MANUAL.md  GPTthoughts.md
evals/: recorded-session-evals.xml
packaging/: Distribution-AGENTS.md  Distribution-README.md
plugins/flight-recorder/: .mcp.json
plugins/flight-recorder/.codex-plugin/: plugin.json
plugins/flight-recorder/hooks/: hooks.json
plugins/flight-recorder/skills/flight-recorder/: SKILL.md
scripts/: Bootstrap-Htmx.ps1  Build-Plugin.ps1  Capture-MarketplaceScreenshot.ps1  Collect-Diagnostics.ps1  New-Distribution.ps1  New-ReleasePackage.ps1  Test-Distribution.ps1  Test-FiveMinuteCapture.ps1  Test-HookBridge.ps1  Test-PortablePackage.ps1  Test-Preferences.ps1  Test-ReleaseArtifact.ps1  Verify-Distribution.ps1
