[workspace]
resolver = "2"
members = ["crates/core", "apps/desktop", "apps/bridge"]

[workspace.package]
version = "0.2.0-preview.1"
edition = "2024"
license = "MIT"
authors = ["Invisible Acropolis"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
crossbeam-channel = "0.5.15"
directories = "6.0.0"
parking_lot = "0.12.5"
rand = "0.8.5"
regex = "1.12.2"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.3"
uuid = { version = "1.20.0", features = ["serde", "v7"] }
widestring = "1.2.1"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Performance",
  "Win32_System_RemoteDesktop",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }
