[package]
name = "cdxvidext-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
cdxvidext-core = { path = "../../crates/core" }
chrono.workspace = true
rmcp = { version = "2.2.0", features = ["server", "transport-io"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
