[package]
name = "cdxvidext-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
interprocess = "2.4.2"
parking_lot.workspace = true
rand.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
widestring.workspace = true
windows.workspace = true
windows-capture = "2.0.0"
